--- a/gb/20/12/7/n12600121.md
+++ b/gb/20/12/7/n12600121.md
@@ -1,73 +1,55 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ecztvo362/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ecztvo362/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ecztvo362/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ecztvo362/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ecztvo362/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ecztvo362/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ecztvo362/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ecztvo362/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ecztvo362/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ecztvo362/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ecztvo362/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ecztvo362/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ecztvo362/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ecztvo362/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ecztvo362/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ecztvo362/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ecztvo362/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ecztvo362/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ecztvo362/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ecztvo362/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ecztvo362/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ecztvo362/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ecztvo362/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ecztvo362/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ecztvo362/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ecztvo362/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ecztvo362/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ecztvo362/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ecztvo362/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ecztvo362/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ecztvo362/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ecztvo362/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ecztvo362/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ecztvo362/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ecztvo362/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ecztvo362/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ecztvo362/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ecztvo362/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ecztvo362/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ecztvo362/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ecztvo362/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ecztvo362/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ecztvo362/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ecztvo362/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ecztvo362/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ecztvo362/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ecztvo362/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>多伦多房市：单家庭房型火爆 公寓走缓</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center></h2>
 
 <h6></h6>
-<hr>
-<p>【大纪元2020年12月07日讯】（大纪元记者周行多伦多报导）2020年的<ahref="https://github.com/ecztvo362/djy/blob/master/gb/tag/%E5%A4%9A%E4%BC%A6%E5%A4%9A%E6%88%BF%E5%B8%82.md#1">多伦多房市</a>即将画上句号。今年房市的变化情况，就像中共病毒疫情一样，上下跌宕，其实，就是瘟疫带来了不稳定。</p>
-<p>根据RBC银行的最新报告，11月份全国的房市都表现强劲，但大城市中心的公寓除外。</p>
-<p>按Toronto Storeys网站刊登的一篇文章，<ahref="https://github.com/ecztvo362/djy/blob/master/gb/tag/%E5%A4%9A%E4%BC%A6%E5%A4%9A%E6%88%BF%E5%B8%82.md#1">多伦多房市</a>的状况是“着火”和“飘忽”相组合。</p>
-<p>“着火”的是，尽管多伦多和皮尔区进入了封锁状态，但11月大多伦多地区的二手房销售数量年同比增长了24.3%，房屋价格指数（HPI）增长了10.6%。</p>
-<p>火热的主要是单家庭房型，比如多伦多市（416地区）的单家庭房屋销售量同比增长了24%，而公寓的销售量只是持平。</p>
-<p>RBC银行称，重要的区别是，独立屋挂牌待售量年同比下降了约13%，公寓的上市数量却猛增了194%。该报告说，“难怪多伦多市中心公寓的价格开始走软。”</p>
-<p>按多伦多地产局的报告，416地区11月的公寓平均售价小幅下降。自3月病毒大流行开始以来，4月份是该地区公寓价格年同比下降（-4.0%）的另一个月份，10月份也仅上涨不到1%。</p>
-<p>同期，许多单家庭房型的市场条件趋紧，导致独立、半独立及镇屋售价同比以2位数幅度增长。</p>
-<h2>瘟疫导致公寓供过于求</h2>
-<p>城市中心的公寓市场情况刚好相反。RBC银行的报告说：“过去几个月来，租赁市场的低迷，促使许多公寓投资者抛售房产。”</p>
-<p>病毒危机带来的限制措施，使市中心变萧条，有些地段的租金下降了20%。很多公寓投资者开始抛售房产。</p>
-<p>按多伦多地产局的报告，今年第3季度，出现过待出租公寓数量年同比大幅增长113.9%的情形，原因是许多投资者和Airbnb业主转向长期租赁市场。</p>
-<p>目前的情形是，考虑租赁或购买公寓的人有很多选择，想买单家庭房子的人，需要面对竞争。</p>
-<p>未来的走势很难说，因为要看疫情走向。有人用在大雾天在多伦多市中心的经历做比喻：你能看到电视塔（CN Tower）在那里，但看不见全貌，也无法判断她离你多远。</p>
-<p>地产公司Realosophy Realty的总裁帕萨利斯（John Pasalis）表示，公寓市场的恢复，取决于市中心的恢复，取决于人们开始回办公室上班。“住在市中心是有原因的，因为你可以步行到办公室，餐馆也在附近。”</p>
-<p>责任编辑：岳怡</p>
-
+<hr>[replace]（<a href=<ahref;<a href=<ahref;"https://www.epochtimes.com/gb/2=><a href="https://github.com/kobfyi3602/djy/blob/master/gb/2;  = ;		= ;script=a;http://cn.epochtimes.com/gb/=https://github.com/kobfyi3602/djy/blob/master/gb/;http://www.epochtimes.com/gb/=https://github.com/kobfyi3602/djy/blob/master/gb/;https://www.epochtimes.com/gb/=https://github.com/kobfyi3602/djy/blob/master/gb/;.html=.md#1;.htm=.md#1;" height=" b;/i6/=https://www.epochtimes.com/i6/;<iframe=<a;/iframe>=/a>
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ecztvo362/djy/blob/master/gb/20/4/28/n12067849.md#1">上周房屋销量跌幅放缓 多伦多房市坚韧超预期</a></li>
-<li><a href="https://github.com/ecztvo362/djy/blob/master/gb/20/6/15/n12187266.md#1">疫情未消退 多伦多房市再现火爆态势</a></li>
-<li><a href="https://github.com/ecztvo362/djy/blob/master/gb/20/8/6/n12310216.md#1">专家评多伦多房市当前和未来走向</a></li>
-<li><a href="https://github.com/ecztvo362/djy/blob/master/gb/20/8/10/n12318272.md#1">多伦多房市会崩溃吗？专家怎么说？</a></li>
-<li><a href="https://github.com/ecztvo362/djy/blob/master/gb/20/10/5/n12454799.md#1">瑞银：多伦多房市泡沫风险全球第三高</a></li>
-<li><a href="https://github.com/ecztvo362/djy/blob/master/gb/20/11/5/n12526163.md#1">10月 多伦多房市连续第4个月火爆</a></li>
-<li><a href="https://github.com/ecztvo362/djy/blob/master/gb/20/12/6/n12599817.md#1">多伦多警方：防患于未然 避免节日包裹被盗</a></li>
-<li><a href="https://github.com/ecztvo362/djy/blob/master/gb/20/12/6/n12599800.md#1">多伦多一养老院超百名住客染疫</a></li>
-<li><a href="https://github.com/ecztvo362/djy/blob/master/gb/20/12/6/n12599757.md#1">安省周日新增1,924例 再创历史新高</a></li>
-<li><a href="https://github.com/ecztvo362/djy/blob/master/gb/20/12/6/n12599747.md#1">崭新GO巴士联合车站终点站周六迎客</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/11/12/n12543022.md#1">欲先发制人抢房？霸王开价有利弊</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/11/19/n12560005.md#1">好日子到头 加拿大公寓市场疲软</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/11/25/n12575539.md#1">埃德蒙顿房屋销量大增</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/11/26/n12576383.md#1">多伦多新公寓行情：城区冷清 郊区火爆</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/12/2/n12589040.md#1">疫情推动 加国度假屋价格劲涨15%至40%</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/12/3/n12591739.md#1">渥京拟收海外买家税 专家：不能一刀切</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/12/3/n12591824.md#1">多伦多今年房价大涨 Re/MAX：明年会再涨6%</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13753004.md#1">GTA五月房产交易下降39%?房价涨近10%?</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751210.md#1">多伦多唐人街一批商铺未交地税 市府正在拍卖</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13750537.md#1">油价涨 带火卡尔加里商业地产</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/18/n11052730.md#1" target="_blank">王友群：按邓小平的说法 中共早该下台了</a></li><li><a href="https://github.com/ecztvo362/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/11/n11581886.md#1" target="_blank">澳青年法轮功学员：修大法给我带来的福分</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/13/n10712571.md#1" target="_blank">林辉：中共地雷战幕后清华师生的惨死</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/14/n11384505.md#1" target="_blank">欧洲名校毕业的一代骄子 难忘童年之痛</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ecztvo362/djy/blob/master/gb/20/11/28/n12581077.md#1">前世今生一个女人两度转变他的人生</a></li>
-<li><a href="https://github.com/ecztvo362/djy/blob/master/gb/20/11/30/n12585066.md#1">川普是天选之人？ 专家解析他与圣经的关连</a></li>
-<li><a href="https://github.com/ecztvo362/djy/blob/master/gb/20/11/27/n12580382.md#1">刘伯温说寓言 如何面对权术威胁</a></li>
-<li><a href="https://github.com/ecztvo362/djy/blob/master/gb/20/12/1/n12588670.md#1">姜子牙之女做王后 历经千年贤名传</a></li>
-<li><a href="https://github.com/ecztvo362/djy/blob/master/gb/20/11/19/n12560430.md#1">但丁《神曲》故事：欺诈——毒害世界的怪物</a></li>
-<li><a href="https://github.com/ecztvo362/djy/blob/master/gb/20/11/27/n12580275.md#1">【思想领袖】努涅斯议员：拜登假装赢得大选</a></li>
-<li><a href="https://github.com/ecztvo362/djy/blob/master/gb/20/12/5/n12597490.md#1">【微历史】恩格斯百年阴谋 结出2020美大选恶果</a></li>
-<li><a href="https://github.com/ecztvo362/djy/blob/master/gb/20/12/5/n12597744.md#1">【西岸观察】舞弊视频主角现身 乔州州长变脸</a></li>
-<li><a href="https://github.com/ecztvo362/djy/blob/master/gb/20/12/4/n12596002.md#1">【新闻大家谈】拜登舞弊实锤证据 被指政变</a></li>
-<li><a href="https://github.com/ecztvo362/djy/blob/master/gb/20/12/4/n12595030.md#1">川普在白宫发表最重要演讲全文翻译</a></li>
-<li><a href="https://github.com/ecztvo362/djy/blob/master/gb/20/12/4/n12597041.md#1">乔州计票站母女自拍“舞弊片”引关注</a></li>
-<li><a href="https://github.com/ecztvo362/djy/blob/master/gb/20/12/3/n12594445.md#1">孙俪得意晒自拍 被意外发现一件衣服穿了十年</a></li>
-<li><a href="https://github.com/ecztvo362/djy/blob/master/gb/20/12/4/n12597136.md#1">走红毯冻到下巴发抖 孟美岐反问一句登热搜</a></li>
-<li><a href="https://github.com/ecztvo362/djy/blob/master/gb/20/12/4/n12596927.md#1">传刘德华8岁女儿住院 朱丽倩陪同现身心脏科</a></li>
-<li><a href="https://github.com/ecztvo362/djy/blob/master/gb/20/12/3/n12594254.md#1">回应扮27岁顾曼璐争议 刘嘉玲称未纠结过年龄</a></li>
-<li><a href="https://github.com/ecztvo362/djy/blob/master/gb/20/12/4/n12596670.md#1">杜汶泽赴台拍新节目 介绍移民方式给香港手足</a></li>
-<li><a href="https://github.com/ecztvo362/djy/blob/master/gb/20/12/4/n12595124.md#1">现在是几点？ CIA照片考验你的判断力</a></li>
-<li><a href="https://github.com/ecztvo362/djy/blob/master/gb/20/12/4/n12595215.md#1">按摩脚底2部位 远离失智症！大脑脊椎一起保养</a></li>
-<li><a href="https://github.com/ecztvo362/djy/blob/master/gb/20/12/4/n12595443.md#1">美传教士：左派对抗神的旨意 川普才是总统</a></li>
-<li><a href="https://github.com/ecztvo362/djy/blob/master/gb/20/11/27/n12580401.md#1">耳垂2征兆恐是高血压！不用血压计的判断方法</a></li>
-<li><a href="https://github.com/ecztvo362/djy/blob/master/gb/20/12/2/n12590408.md#1">生姜别直接吃？国际药膳师：蒸一下功效更强</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752411.md#1">【时事军事】苏-35S被米格-29击落 刺痛了谁？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751784.md#1">中国最富城市之一深圳降薪 钱荒引爆民怨</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751624.md#1">中共吹嘘“最大常规航母” 分析：美国早已淘汰</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751705.md#1">外交人事洗牌 杨洁篪王毅继任人选引猜测</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/2/n13751191.md#1">客串韩剧下周播 范冰冰晒运动瘦身照宣传造势</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ecztvo362/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ecztvo362/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/12/7/n12600121.htm">多伦多房市：单家庭房型火爆 公寓走缓</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/12/7/n12600121.htm"></a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ecztvo362/djy/blob/master/gb/20/12/7/n12600121.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ecztvo362/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecztvo362/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ecztvo362/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ecztvo362/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ecztvo362/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecztvo362/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ecztvo362/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecztvo362/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ecztvo362/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecztvo362/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ecztvo362/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecztvo362/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ecztvo362/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecztvo362/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ecztvo362/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecztvo362/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ecztvo362/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecztvo362/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ecztvo362/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecztvo362/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ecztvo362/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecztvo362/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ecztvo362/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecztvo362/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ecztvo362/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecztvo362/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ecztvo362/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecztvo362/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ecztvo362/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecztvo362/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ecztvo362/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecztvo362/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ecztvo362/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecztvo362/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ecztvo362/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecztvo362/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ecztvo362/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecztvo362/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ecztvo362/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecztvo362/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ecztvo362/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecztvo362/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ecztvo362/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecztvo362/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ecztvo362/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecztvo362/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ecztvo362/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ecztvo362/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/20/12/7/n12600121.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
